# tltd

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  IDEAS.md  README.md  TESTING.md  pyproject.toml  requirements.txt  setup.py
.claude/agents/: code-merge-architect.md  code-sanitizer.md  middle-dev.md  quick-task-executor.md  security-researcher.md
raycast/: td.sh  tltd.sh
src/: app.py  main.py  models.py  quick_add.py  storage.py  styles.py
src/dialogs/: __init__.py  basket_selector.py  description_editor.py  help_screen.py
src/widgets/: __init__.py  basket_pane.py  task_line.py  task_tree.py
tests/: test_models.py  test_multiselect.py  test_storage.py
